# ActionsExample

./: .main.cpp.swp  CMakeLists.txt  GlobalFunctions.cpp  input01.txt  input02.txt  main.cpp
.github/workflows/: build.yaml
